# library-for-working-on-obi

./: .gitignore  CMakeLists.txt  a.out  main.c  obi разшифровка.txt  test.obi  windows10.iso
include/: write_pixels.h
src/: write_pixels.c
